# python_project

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev.py  pyproject.toml  setup.txt  test.py
backtest_analysis/backtests/: backtests.txt
backtest_analysis/graphs/: graphs.txt
backtest_analysis/statistics/: statistics.txt
blockchain/: backtest.pkl
docs/: Makefile  conf.py  example.ipynb  make.bat
src/python_project/: CHANGELOG.md  extra_broker.py  extra_modules.py  python_project.py  user_function.py
src/python_project/test_cython/: example.c  example.py  example.pyx  main.py  setup.py
src/python_project_RD/: CHANGELOG.md  extra_broker.py  extra_modules.py  user_function.py
src/test_cython/: example.py  main.py
tests/: test_extra_broker.py  test_imports.py
